--- a/BirthCoach/Storyboards/Base.lproj/MainStoryboard_iPhone.storyboard
+++ b/BirthCoach/Storyboards/Base.lproj/MainStoryboard_iPhone.storyboard
@@ -28,7 +28,7 @@
                                         <rect key="frame" x="216" y="0.0" width="84" height="122"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
-                                        <state key="normal" image="start-button.png">
+                                        <state key="normal" image="start-button">
                                             <color key="titleColor" red="0.19607843459999999" green="0.30980393290000002" blue="0.52156865600000002" alpha="1" colorSpace="calibratedRGB"/>
                                             <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                         </state>
@@ -120,7 +120,7 @@
                                         <rect key="frame" x="-275" y="48" width="301" height="64"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <subviews>
-                                            <imageView contentMode="scaleToFill" image="orange-handle.png" id="vuW-L5-LUt">
+                                            <imageView contentMode="scaleToFill" image="orange-handle" id="vuW-L5-LUt">
                                                 <rect key="frame" x="275" y="0.0" width="26" height="44"/>
                                                 <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxY="YES"/>
                                             </imageView>
@@ -290,7 +290,7 @@
                                 <rect key="frame" x="259" y="426" width="50" height="48"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMinY="YES"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
-                                <state key="normal" image="settings.png">
+                                <state key="normal" image="settings">
                                     <color key="titleColor" red="0.19607843459999999" green="0.30980393290000002" blue="0.52156865600000002" alpha="1" colorSpace="calibratedRGB"/>
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
@@ -562,7 +562,7 @@
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="e8n-JN-WQs">
                                 <rect key="frame" x="20" y="235" width="108" height="46"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" title="Cancel" backgroundImage="cancel-button.png">
+                                <state key="normal" title="Cancel" backgroundImage="cancel-button">
                                     <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
@@ -575,7 +575,7 @@
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="dL8-QA-C0F">
                                 <rect key="frame" x="136" y="235" width="163" height="46"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" title="Save my changes" backgroundImage="save-button.png">
+                                <state key="normal" title="Save my changes" backgroundImage="save-button">
                                     <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
@@ -626,7 +626,7 @@
                                         <rect key="frame" x="238" y="10" width="73" height="40"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
-                                        <state key="normal" title="Done" backgroundImage="save-button.png">
+                                        <state key="normal" title="Done" backgroundImage="save-button">
                                             <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                             <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                         </state>
@@ -817,7 +817,7 @@ AQABAAEAAQAB//+dkAEA//+PgAAE//+dkAEI//+dkAEMUERUAFBTVABQV1QAUFBUAAAAAAEAAAABA
                                 <rect key="frame" x="-275" y="45" width="301" height="44"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <subviews>
-                                    <imageView contentMode="scaleToFill" image="blue-handle.png" id="9M2-d0-vdx">
+                                    <imageView contentMode="scaleToFill" image="blue-handle" id="9M2-d0-vdx">
                                         <rect key="frame" x="275" y="0.0" width="26" height="44"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxY="YES"/>
                                     </imageView>
@@ -1043,19 +1043,19 @@ AQABAAEAAQAB//+dkAEA//+PgAAE//+dkAEI//+dkAEMUERUAFBTVABQV1QAUFBUAAAAAAEAAAABA
         <image name="blue-circle-selected.png" width="29" height="29"/>
         <image name="blue-circle-unselected.png" width="31" height="31"/>
         <image name="blue-edit.png" width="28" height="27"/>
-        <image name="blue-handle.png" width="26" height="44"/>
+        <image name="blue-handle" width="26" height="44"/>
         <image name="blue-trash.png" width="22" height="31"/>
+        <image name="cancel-button" width="107" height="46"/>
         <image name="cancel-button-selected.png" width="107" height="46"/>
-        <image name="cancel-button.png" width="107" height="46"/>
         <image name="orange-circle-selected.png" width="29" height="30"/>
         <image name="orange-circle-unselected.png" width="29" height="28"/>
         <image name="orange-edit.png" width="28" height="27"/>
-        <image name="orange-handle.png" width="26" height="44"/>
+        <image name="orange-handle" width="26" height="44"/>
         <image name="orange-trash.png" width="22" height="30"/>
+        <image name="save-button" width="162" height="46"/>
         <image name="save-button-selected.png" width="162" height="46"/>
-        <image name="save-button.png" width="162" height="46"/>
-        <image name="settings.png" width="41" height="42"/>
-        <image name="start-button.png" width="61" height="81"/>
+        <image name="settings" width="41" height="42"/>
+        <image name="start-button" width="61" height="81"/>
     </resources>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar"/>
