--- a/BirthCoach/Storyboards/Base.lproj/MainStoryboard_iPhone.storyboard
+++ b/BirthCoach/Storyboards/Base.lproj/MainStoryboard_iPhone.storyboard
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="4510" systemVersion="12F45" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" initialViewController="QqC-Gy-unH">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="4514" systemVersion="13B42" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" initialViewController="QqC-Gy-unH">
     <dependencies>
         <deployment version="1536" defaultVersion="1792" identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3742"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3747"/>
     </dependencies>
     <scenes>
         <!--Root View Controller-->
@@ -280,11 +280,9 @@
                                 <rect key="frame" x="0.0" y="272" width="320" height="80"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
-                            </containerView>
-                            <containerView contentMode="scaleToFill" id="MYH-zI-WdJ">
-                                <rect key="frame" x="0.0" y="368" width="320" height="112"/>
-                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                                <connections>
+                                    <segue destination="tMg-FT-HbE" kind="embed" identifier="Averages" id="2Sv-7x-6lH"/>
+                                </connections>
                             </containerView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="0ya-54-ZtW">
                                 <rect key="frame" x="259" y="426" width="50" height="48"/>
@@ -305,12 +303,10 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
                     <connections>
-                        <outlet property="averagesContainerView" destination="0xo-Xa-pcg" id="IZJ-fb-JtL"/>
                         <outlet property="durationLabel" destination="BEi-4X-Lhy" id="sbc-Ij-Z3J"/>
                         <outlet property="durationTitleLabel" destination="zd8-8J-Isd" id="7RL-lT-WXF"/>
                         <outlet property="frequencyLabel" destination="37G-V5-0Jc" id="7ls-gB-Uf3"/>
                         <outlet property="frequencyTitleLabel" destination="OR3-nF-D60" id="Y6h-RM-xiV"/>
-                        <outlet property="historyContainerView" destination="MYH-zI-WdJ" id="N64-tb-a2V"/>
                         <outlet property="inspirationalLabel" destination="TO7-bq-l14" id="DY1-fM-EAw"/>
                         <outlet property="intensityLabel" destination="HNB-kZ-NCc" id="1Lw-Uo-C9h"/>
                         <outlet property="intensityTitleLabel" destination="M69-PE-W5a" id="xPZ-sJ-l6z"/>
@@ -1021,6 +1017,7 @@ AQABAAEAAQAB//+dkAEA//+PgAAE//+dkAEI//+dkAEMUERUAFBTVABQV1QAUFBUAAAAAAEAAAABA
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
                     <toolbarItems/>
+                    <nil key="simulatedStatusBarMetrics"/>
                     <connections>
                         <outlet property="contractionHistoryLabel" destination="s2O-oK-gLP" id="0Sh-ST-Mnu"/>
                         <outlet property="contractionIntensityContainerView" destination="Y7M-cZ-nVs" id="ooj-oa-9G9"/>
